feat: 예시 코드 구현