@@ -1,29 +1,54 @@
 package com.example.live_backend.global;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
+import io.swagger.v3.oas.models.Components;
 import io.swagger.v3.oas.models.OpenAPI;
+import io.swagger.v3.oas.models.info.Contact;
 import io.swagger.v3.oas.models.info.Info;
+import io.swagger.v3.oas.models.info.License;
+import io.swagger.v3.oas.models.security.SecurityRequirement;
+import io.swagger.v3.oas.models.security.SecurityScheme;
 import io.swagger.v3.oas.models.servers.Server;
 
 @Configuration
 public class SwaggerConfig {
 
     @Bean
-    public OpenAPI openApi() {
+    public OpenAPI openAPI() {
         Info info = new Info()
-                .version("v1.0") //버전
-                .title("Lively API") //이름
-                .description("라이블리 API"); //설명
+                .title("Lively API")
+                .version("v1.0")
+                .description("라이블리 API 문서")
+                .contact(new Contact()
+                        .name("Lively Team")
+                        .email("example@example.com"));
+
+        // 서버 설정
+        Server localServer = new Server();
+        localServer.setUrl("http://localhost:8080");
+        localServer.setDescription("Local Server");
+
+        // 보안 스키마 설정
+        SecurityScheme securityScheme = new SecurityScheme()
+                .type(SecurityScheme.Type.HTTP)
+                .scheme("bearer")
+                .bearerFormat("JWT")
+                .in(SecurityScheme.In.HEADER)
+                .name("Authorization");
+
+        SecurityRequirement securityRequirement = new SecurityRequirement().addList("bearerAuth");
+
         return new OpenAPI()
-                .servers(Arrays.asList(
-                        new Server().url("http://localhost:8080").description("Local 서버")
-                        //new Server().url("").description("Production 서버")
-                ))
-                .info(info);
+                .info(info)
+                .servers(List.of(localServer))
+                .components(new Components()
+                        .addSecuritySchemes("bearerAuth", securityScheme))
+                .security(List.of(securityRequirement));
     }
 
 }
